--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,28 +1,24 @@
 <!doctype html>
 <html>
 <head>
-<script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.css' />
+    <link rel='stylesheet' href='css/app.css' />
 </head>
 
 <body>
-    <div>
-        <ul id='lista'>
-        </ul>
-    </div>
+    <div class='content'>
+        <div class='tabs is-centered'>
+            <ul id='letras'>
+            </ul>
+        </div>
 
-    <script type='text/javascript'>
-        $.get('http://localhost:5000', function(data) {
-            var animes = data.animes;
-            var $lista = $('#lista');
-            $.each(animes, function(index, anime) {
-                anime_data = anime.nombre + ': ' + anime.descripcion;
-                $anime = $('<li> ' + anime_data + ' </li>');
-                $lista.append($anime);
-            });
-        })
-    </script>
+        <div class='content' id='series'>
+        </div>
+    </div>
 </body>
+<script src='javascript/app.js' type='text/javascript'></script>
 </html>
