Add more frontend pages

--- a/frontend/iniciar_sesion.html
+++ b/frontend/iniciar_sesion.html
@@ -13,24 +13,25 @@
 </head>
 
 <body>
-    <br>
+
+
+
+<br>
     <br>
     <br>
     <br>
     <br>
     <br>
 
-
-<!--Aca esta el menu principal. -->
-<div class="tabs is-toggle is-fullwidth">
+    <div class="tabs is-toggle is-fullwidth">
   <ul>
-    <li class="is-active">
+    <li>
       <a href="index.html">
         <span class="icon is-small"><i class="fa fa-image"></i></span>
         <span>Pagina Principal.</span>
       </a>
     </li>
-     <li>
+     <li class="is-active">
     <a href="iniciar_sesion.html">
         <span class="icon is-small"><i class="fa fa-film"></i></span>
         <span>Iniciar Sesion.</span>
@@ -44,42 +45,59 @@
     </li>
    
     <li>
-      <a href="Top_Animes.html">
+      <a href="Top_Animes.html" >
         <span class="icon is-small"><i class="fa fa-file-text-o"></i></span>
         <span>Top Animes.</span>
       </a>
     </li>
 
     <li>
-      <a href="Top_Animes.html">
+      <a href="#">
         <span class="icon is-small"><i class="fa fa-file-text-o"></i></span>
         <span>Proximos Proyectos.</span>
       </a>
     </li>
   </ul>
-
-
-
 </div>
-
-    
+  <div class="sesion">
     <div class="card">
-        <div class="introduccion">
-            <div class="content">
-               <p class="title" >Que hacemos.</p>
-               <div >
-                Anime Final Searcher es un sistema de aprendizaje automatico, en el cual vos tenes que decirle que anime viste(y te gusta) y a partir de eso genera una serie de sugerencias. Estas sugerencias van a ser mas precisas a medida que uses mas esta app. Para esto usa los generos de los animes anteriormente vistos y busca cuales son los que tienen mayor probabilidad de interes para el usuario.
+          <div class="introduccion">
+              <div class="content">
+                 <p class="title" >Inicio de sesion.</p>
+                 <div class="field">
+                  <label class="label">Nombre de Usuario.</label>
+                  <p class="control">
+                    <input class="input" type="text" placeholder="Ingrese su nickname.">
+                  </p>
+                  </div>
+                <br>
+                <div class="field">
+                  <label class="label">Contrase&ntildea.</label>
+                  <p class="control">
+                    <input class="input" type="text" placeholder="Ingrese su Contrase&ntilde a">
+                  </p>
                 </div>
-              <br>
+              </div>
+            <div class="field">
+              <p class="control">
+                <label class="checkbox">
+                  <input type="checkbox">
+                   Mantener sesion iniciada.
+                </label>
+              </p>
             </div>
-        </div>
-    </div>
+            <div class="block">
+              <a class="button is-primary">Iniciar sesion.</a>
+            </div>
+          </div>
+   </div>
+  </div>
+        
+ 
+   
 
 
 
-
-    <br>
-    <br>
  
 
    
