--- a/frontend/biblioteca.html
+++ b/frontend/biblioteca.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<title>Pagina Principal</title>
+<title>Biblioteca</title>
 <head>
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -9,7 +9,6 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.1/css/bulma.css' />
     <link rel='stylesheet' href='css/app.css' />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <!-- <img height="50" width="150" src="logo.png"> -->
 </head>
 
 <body>
@@ -20,11 +19,9 @@
     <br>
     <br>
 
-
-<!--Aca esta el menu principal. -->
-<div class="tabs is-toggle is-fullwidth">
+    <div class="tabs is-toggle is-fullwidth">
   <ul>
-    <li class="is-active">
+    <li>
       <a href="index.html">
         <span class="icon is-small"><i class="fa fa-image"></i></span>
         <span>Pagina Principal.</span>
@@ -36,7 +33,7 @@
         <span>Iniciar Sesion.</span>
       </a>
     </li>
-    <li>
+    <li class="is-active">
       <a href="biblioteca.html">
         <span class="icon is-small"><i class="fa fa-music"></i></span>
         <span>Nuestra Biblioteca.</span>
@@ -51,38 +48,22 @@
     </li>
 
     <li>
-      <a href="Top_Animes.html">
+      <a href="#">
         <span class="icon is-small"><i class="fa fa-file-text-o"></i></span>
         <span>Proximos Proyectos.</span>
       </a>
     </li>
   </ul>
-
-
-
 </div>
+    <div class='content'>
+        <div class='tabs is-centered'>
+            <ul id='letras'>
+            </ul>
+        </div>
 
-    
-    <div class="card">
-        <div class="introduccion">
-            <div class="content">
-               <p class="title" >Que hacemos.</p>
-               <div >
-                Anime Final Searcher es un sistema de aprendizaje automatico, en el cual vos tenes que decirle que anime viste(y te gusta) y a partir de eso genera una serie de sugerencias. Estas sugerencias van a ser mas precisas a medida que uses mas esta app. Para esto usa los generos de los animes anteriormente vistos y busca cuales son los que tienen mayor probabilidad de interes para el usuario.
-                </div>
-              <br>
-            </div>
+        <div class='content' id='series'>
         </div>
     </div>
-
-
-
-
-    <br>
-    <br>
- 
-
-   
 </body>
-
+<script src='javascript/app.js' type='text/javascript'></script>
 </html>
